// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:tabs as form item 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--line"
          data-role="container"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
              >
                <ul
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
                  role="tablist"
                >
                  <li
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
                  >
                    <a
                      title="Tab 1"
                    >
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                      >
                        Tab 1
                      </span>
                    </a>
                  </li>
                  <li
                    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
                  >
                    <a
                      title="Tab 2"
                    >
                      <span
                        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                      >
                        Tab 2
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Content 1
                </span>
              </span>
            </div>
            <div
              class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  Content 2
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            submitText
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs change active tab 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--line tabs-wrapper"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close"
              >
                <icon-mock
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close-icon icon-close"
                  icon="close"
                />
              </span>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close"
              >
                <icon-mock
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close-icon icon-close"
                  icon="close"
                />
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs change active tab 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--line tabs-wrapper"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close"
              >
                <icon-mock
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close-icon icon-close"
                  icon="close"
                />
              </span>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close"
              >
                <icon-mock
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-close-icon icon-close"
                  icon="close"
                />
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="c"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  文本3
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="c"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="d"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  文本4
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="d"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--card"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--radio"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--vertical"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksWrapper"
    >
      <ul
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
        role="tablist"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
        >
          <a
            title="基本配置"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              基本配置
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
        >
          <a
            title="其他配置"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              其他配置
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 4`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--chrome"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksWrapper"
    >
      <ul
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
        role="tablist"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
        >
          <a
            title="基本配置"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              基本配置
            </span>
          </a>
          <div
            class="chrome-tab-background"
          >
            <svg
              class="chrome-tab-background--right"
              viewBox="0 0 124 124"
            >
              <path
                d="M0,0 C0,68.483309 55.516691,124 124,124 L0,124 L0,-1 C0.00132103964,-0.667821298 0,-0.334064922 0,0 Z"
              />
            </svg>
            <svg
              class="chrome-tab-background--left"
              viewBox="0 0 124 124"
            >
              <path
                d="M124,0 L124,125 L0,125 L0,125 C68.483309,125 124,69.483309 124,1 L123.992,0 L124,0 Z"
              />
            </svg>
          </div>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
        >
          <a
            title="其他配置"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              其他配置
            </span>
          </a>
          <div
            class="chrome-tab-background"
          >
            <svg
              class="chrome-tab-background--right"
              viewBox="0 0 124 124"
            >
              <path
                d="M0,0 C0,68.483309 55.516691,124 124,124 L0,124 L0,-1 C0.00132103964,-0.667821298 0,-0.334064922 0,0 Z"
              />
            </svg>
            <svg
              class="chrome-tab-background--left"
              viewBox="0 0 124 124"
            >
              <path
                d="M124,0 L124,125 L0,125 L0,125 C68.483309,125 124,69.483309 124,1 L123.992,0 L124,0 Z"
              />
            </svg>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 5`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--simple"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 6`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--strong"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 7`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--tiled"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs tabsMode 8`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--sidebar sidebar--right"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksWrapper"
    >
      <ul
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
        role="tablist"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
        >
          <a
            title="基本配置"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              基本配置
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
        >
          <a
            title="其他配置"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              其他配置
            </span>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs toolbar 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--line"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper __AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper--toolbar"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="基本配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  基本配置
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="其他配置"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  其他配置
                </span>
              </a>
            </li>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-toolbar toolbarClassName"
            >
              <button
                class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-sm"
                type="button"
              >
                <span>
                  按钮
                </span>
              </button>
            </div>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <p>
              tab1 内容
            </p>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabs with collapseOnExceed: popover show 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs __AMIS_COMPONENT_CLASS_PREFIX__Tabs--tiled has-popover"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
        >
          <ul
            class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-links"
            role="tablist"
          >
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link is-active"
            >
              <a
                title="Tab 1"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  Tab 1
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                title="Tab 2"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                >
                  Tab 2
                </span>
              </a>
            </li>
            <li
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
            >
              <a
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-togglor is-opened"
              >
                <span>
                  更多
                </span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-togglor-arrow"
                >
                  <icon-mock
                    class="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-content"
    >
      <div
        class="in is-active __AMIS_COMPONENT_CLASS_PREFIX__Tabs-pane"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            Content 1
          </span>
        </span>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__PopOver __AMIS_COMPONENT_CLASS_PREFIX__Tabs-PopOver"
      data-amis-theme="cxd"
      role="popover"
      style="display: block; min-width: auto; left: 0px; top: 0px; visibility: hidden;"
      theme="cxd"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__PopOver-overlay"
      />
      <ul
        class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-PopOverList __AMIS_COMPONENT_CLASS_PREFIX__DropDown-menu"
      >
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
        >
          <a
            title="Tab 3"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              Tab 3
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
        >
          <a
            title="Tab 4"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              Tab 4
            </span>
          </a>
        </li>
        <li
          class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link"
        >
          <a
            title="Tab 5"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__Tabs-link-text"
            >
              Tab 5
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
